--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: #f1eae0;
+  font-family: 'Apple SD Gothic Neo', 'Noto Sans KR',  'Nanum Gothic', 'Malgun Gothic', sans-serif;
 }
 
 body {
