--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #f1eae0;
+  background-color: #ffffff;
   font-family: 'Pretendard Variable', 'Pretendard', sans-serif;
 }
 
