--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,3 +69,19 @@ a {
 .dots_custom li.slick-active button {
   background: #f2916e;
 }
+
+/* 스크롤바 전체 스타일 */
+::-webkit-scrollbar {
+  width: 10px; /* 스크롤바 너비 */
+}
+
+/* 스크롤바 슬라이더 스타일 */
+::-webkit-scrollbar-thumb {
+  background-color: #aaa; /* 슬라이더 색상 */
+  border-radius: 5px; /* 슬라이더 모양 */
+}
+
+/* 스크롤바 트랙 스타일 */
+::-webkit-scrollbar-track {
+  background-color: #eee; /* 트랙 색상 */
+}
